Fixes for facets on mobile.
Shows the form in the slidey-out section when at mobile size (and sets
the bg color to match the normal facets so that it is possible to read
the labels)

--- a/ckanext/dgu/theme/src/css/dgu-ckan.less
+++ b/ckanext/dgu/theme/src/css/dgu-ckan.less
@@ -301,9 +301,11 @@ table.tablesorter {
         width: 80%;
         left: -82%;
         top: 300px;
-        background: #333;
+        background: #E0E0E0;
         padding-top: 50px;
         padding-bottom: 50px;
+        padding-left: 50px;
+        padding-right: 50px;
         .box-shadow(2px 2px 8px rgba(0,0,0,0.4));
         .border-radius(25px,25px,0,0);
         -webkit-transition: left 0.25s ease;
